# attack-on-memory

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/labels/: labels.yml
.github/workflows/: ci.yml  labels.yml  scorecard.yml
docs/: BENCHMARK_REPORT_TEMPLATE.md  ENTERPRISE_REVIEW_CHECKLIST.md  FAQ.md  GITHUB_LAUNCH_PLAN.md  LAUNCH_COPY_CN_EN.md  LAUNCH_DAY_24H_CHECKLIST.md  OPERATIONS_WARMUP_PLAYBOOK.md  README.md  RELEASE_NOTES_v0.1.0.md  REVIEW_PREP_MEETING_AGENDA.md  SOCIAL_LAUNCH_POSTS.md  SOCIAL_WAVES_48H_CN_EN.md  SPRINT_48H_EXECUTION.md  STARTER_PR_WALKTHROUGH.md  WEEK1_POST_LAUNCH_CALENDAR.md  architecture.md  experiments-and-value.md  openclaw-integration.md  scenario-spec.md  threat-model.md
docs/benchmarks/: latest-results.json  v0.1-baseline.md  v0.1-benchmark-snapshot.md
examples/: openclaw_demo.py  openclaw_replay_to_scenario.py  simulation_runner.py  validate_scenarios.py
examples/scenarios/: README.md  case_01_selective_disclosure_manipulation.json  case_02_scout_inheritance.json  case_03_rumbling_emergency_privilege.json  scenario.schema.json
scripts/: generate_benchmark_snapshot.py  make_demo_gif.sh  quality_gate.py
tests/: test_branch_world_model.py  test_graph_backend_adapter.py  test_openclaw_adapter.py  test_replay_converter.py  test_retrieval_and_governance.py  test_scenario_validation.py  test_vector_adapter_wiring.py
(+15 files in other folders)
